--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
                       </div>
                     </div></div>
                   </div>    
-                 <a menu-button href=""><button class="order_now btn btn-warning w-25 ">View Full Menu</button></a>
+                 <div class="menu-button row"><div class="col-4"></div>
+                 <div class="col-lg-3 col-md-6 col-sm-12"><a class="order_now" href=""><button class="btn btn-warning w-100 view-menu ">View Full Menu</button></a></div>
+                 <div class="col-4"></div></div>
                 </div>
                 
             
