--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <!-- Nav Bar -->
 <nav class="navbar navbar-expand-md  fixed-top ">
   <a class="navbar-brand title" href="#"><span>XYZ Restaurant</span></a>
-  <button class="navbar-toggler pe-5 ms-auto" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon  "></span>
+  <button class="navbar-toggler pe-5 ms-auto btn-sm" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon "></span>
   </button>
   <div class="offcanvas offcanvas-end"  tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
     <div class="offcanvas-header">
